--- a/app/views/header-footer/footer.phtml
+++ b/app/views/header-footer/footer.phtml
@@ -1,4 +1,4 @@
-<footer class="mainfooter" role="contentinfo" >
+<footer id="footer" class="mainfooter" role="contentinfo" >
     <div class="footer-middle">
         <div class="container">
             <div class="row">
@@ -7,7 +7,7 @@
                     <div class="footer-pad">
                         <a href="<?php echo _WEB_ROOT ?>">
                             <img src="<?php echo _PUBLIC ?>/images/Logo.jpg" height="80px" width="100px" style="border-radius: 5px;margin-left: 30px;" />
-                            <h4><b>Question And Answer</b></h4>
+                            <h4 style="margin-left: 35px;"><b>meAsking</b></h4>
                         </a>
 
                     </div>
@@ -17,7 +17,7 @@
                     <div class="footer-pad">
                         <h4><b>Address</b></h4>
                         <ul class="list-unstyled">
-                            <li><a href="#">225-227 Nguyen Van Cu Street, 5 District, HCMC</a></li>
+                            <li><a >225-227 Nguyen Van Cu Street, 5 District, HCMC</a></li>
                         </ul>
                     </div>
                 </div>
@@ -26,21 +26,19 @@
                     <div class="footer-pad">
                         <h4><b>Contact Info</b></h4>
                         <ul class="list-unstyled">
-                            <li><a href="#">Phone: 0228 676767 34</a></li>
-                            <li><a href="#">Mobile Phone: 0923290076</a></li>
-                            <li><a href="#">Email: quilq@spc-technology.com</a></li>
-                            <li><a href="#">Fax: 12311122221</a></li>
-                            <li>
-                                <a href="#"></a>
-                            </li>
+                            <li><a >Phone: 0228 676767 34</a></li>
+                            <li><a >Mobile Phone: 0923290076</a></li>
+                            <li><a >Email: quilq@spc-technology.com</a></li>
+                            <li><a>Fax: 12311122221</a></li>
+                        
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <h4><b>Follow Us</b></h4>
                     <ul class="social-network social-circle">
-                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a  class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
