--- a/app/views/header-footer/header.phtml
+++ b/app/views/header-footer/header.phtml
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav">
                 <li class=""><a href="<?php echo _WEB_ROOT ?>">Home</a></li>
                 <li><a href="<?php echo _WEB_ROOT  . '/Home/Ranking' ?>">Ranking</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#footer">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-nav">
                 <div class="header-search w56 fl search-type-2 not-logins" style="margin-top: 7px;margin-left: 30px;">
