update footer, header, and clean code

--- a/app/layouts/questionLayout.phtml
+++ b/app/layouts/questionLayout.phtml
@@ -2,14 +2,13 @@
 //get category
 $categoryModel = $this->modelAPI('category_ques');
 $categoriesRender = $categoryModel->readAll();
-// print_r($categories);
 ?>
 
 <!DOCTYPE html>
 <html lang="en" style="background-color: #cccccc">
 
 <head>
-  <title>Question And Answer</title>
+  <title>meAsking</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
