--- a/app/views/header-footer/footer.phtml
+++ b/app/views/header-footer/footer.phtml
@@ -26,10 +26,9 @@
                     <div class="footer-pad">
                         <h4><b>Contact Info</b></h4>
                         <ul class="list-unstyled">
-                            <li><a >Phone: 0228 676767 34</a></li>
-                            <li><a >Mobile Phone: 0923290076</a></li>
-                            <li><a >Email: quilq@spc-technology.com</a></li>
-                            <li><a>Fax: 12311122221</a></li>
+                            <li><a >Phone: +8458 380 4682</a></li>
+                            <li><a >Email: duyquang19981@gmail.com</a></li>
+                            <li><a>Fax: 0123456789abz</a></li>
                         
                         </ul>
                     </div>
